--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.0-rc.2",
+    "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@types/node": "20.6.0",
@@ -34,6 +36,8 @@
     "@storybook/nextjs": "^7.4.1",
     "@storybook/react": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
+    "@types/graphql": "^14.5.0",
+    "apollo": "^2.34.0",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.29",
