--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/graphql": "^14.5.0",
     "apollo": "^2.34.0",
     "autoprefixer": "^10.4.15",
+    "cypress": "^13.3.0",
     "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.29",
     "storybook": "^7.4.1"
