configure cypress, add init tests, fix issue with ts-config

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "cypress:open": "cypress open",
     "generate": "graphql-codegen"
   },
   "dependencies": {
