--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    //As we live in the hell of JavaScript
+    //We need to use the Node module resolution
+    //To fix an import issue with GQL request
+    "moduleResolution": "Node10",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
