--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: https://fittrackr-api-production.up.railway.app/graphql
+schema: http://localhost:80/graphql
 documents: './src/lib/graphql-operations/**/*.{gql,graphql}'
 generates:
   ./src/types/apollo.tsx:
