--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@storybook/react": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^29.5.6",
     "apollo": "^2.34.0",
     "autoprefixer": "^10.4.15",
     "cypress": "^13.3.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.7.0",
     "postcss": "^8.4.29",
     "storybook": "^7.4.1"
   }
